// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title Block should render Default 1`] = `
<DocumentFragment>
  <div
    class="css-6jfyyt-TitleBlockWrapper ek0hk6a0"
  >
    <h1
      class="MuiTypography-root MuiTypography-h3 css-1108gw4-MuiTypography-root"
    >
      This is a title
    </h1>
    <p
      class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
    >
      This is a lead
    </p>
  </div>
</DocumentFragment>
`;

exports[`Title Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname css-6jfyyt-TitleBlockWrapper ek0hk6a0"
  >
    <h1
      class="MuiTypography-root MuiTypography-h3 css-1108gw4-MuiTypography-root"
    >
      This is a title
    </h1>
    <p
      class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
    >
      This is a lead
    </p>
  </div>
</DocumentFragment>
`;

exports[`Title Block should render WithEmotion 1`] = `
<DocumentFragment>
  <div
    class="css-6jfyyt-TitleBlockWrapper ek0hk6a0"
  >
    <h1
      class="MuiTypography-root MuiTypography-h3 css-1108gw4-MuiTypography-root"
    >
      This is a title
    </h1>
    <p
      class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
    >
      This is a lead
    </p>
  </div>
</DocumentFragment>
`;

exports[`Title Block should render WithoutLead 1`] = `
<DocumentFragment>
  <div
    class="css-6jfyyt-TitleBlockWrapper ek0hk6a0"
  >
    <h1
      class="MuiTypography-root MuiTypography-h3 css-1108gw4-MuiTypography-root"
    >
      This is a title
    </h1>
  </div>
</DocumentFragment>
`;
